test(blackjack/domain/user/PlayersTest): 중복된 플레이어 이름 입력시 예외발생 기능에 대한 테스트 코드 작성